force-app/main/default/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>eContacts__Business_Card__c</fullName>
        <label>Image Data Only</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>eContacts__Created_By_eContacts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created By eContacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eContacts__Location_Text__c</fullName>
        <label>Location Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eContacts__Location__c</fullName>
        <label>Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>eContacts__Secondary_Image__c</fullName>
        <label>Image Data2 Only</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>edX_Email_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>edX Contact Email Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>edX_Name__c</fullName>
        <label>edX Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>edX_Opt_In_Date__c</fullName>
        <label>edX Contact Opt In/Out Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>edX_Username__c</fullName>
        <description>Unique login user creates for the edX system.</description>
        <inlineHelpText>This is an edX related username and is only referenced in their database.</inlineHelpText>
        <label>edX Contact Username</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>me3hs_User_ID__c</fullName>
        <description>[eAdvisor Data Warehouse] me3 User Id in email format</description>
        <inlineHelpText>[eAdvisor Data Warehouse] me3 User Id in email format</inlineHelpText>
        <label>me3hs User ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>silverpop__CRMI_Modified_Date__c</fullName>
        <label>CRMI Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>silverpop__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>silverpop__Last_Sync_Id__c</fullName>
        <label>Last Sync Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>silverpop__Lead_Rank__c</fullName>
        <label>Lead Rank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>silverpop__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_Behavior_Score__c</fullName>
        <label>Silverpop Behavior Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_Lead_Rank__c</fullName>
        <label>Silverpop Lead Rank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_Lead_Score__c</fullName>
        <label>Silverpop Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_RecipientID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Silverpop RecipientID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>silverpop__Sync_to_Silverpop_Chk__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use "Sync to Silverpop" to determine which contacts you want to sync with Silverpop. When the box is checked, the field value CANNOT be changed, the selected contacts will be synced to Silverpop and will always sync.</inlineHelpText>
        <label>Sync to Silverpop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>silverpop__Sync_to_Silverpop__c</fullName>
        <label>No Longer Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>ALL_CONTACTS</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>ALL CONTACTS</label>
    </listViews>
    <listViews>
        <fullName>All_Test_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Personal_Email__c</columns>
        <columns>CONTACT.PHONE4</columns>
        <columns>CONTACT.PHONE5</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY</columns>
        <columns>CONTACT.ADDRESS1_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Test Contacts</label>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>Corporate_Relations_Contacts2</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>Corporate_Relations_Contact_Owner__c</columns>
        <columns>Corporate_Relations_Email__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Corporate_Relations_Email__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Corporate_Relations_Contact_Owner__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Corporate Relations Contacts</label>
        <sharedTo>
            <group>Corporate_Relations</group>
            <group>UTO_Administration</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CreatedThisWeek</fullName>
        <columns>CAP__c</columns>
        <columns>CAP_Possible__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.LEAD_SOURCE</columns>
        <columns>Lead_Source_Subtype__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Created This Week</label>
        <sharedTo>
            <group>QA_Testing_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CreatedThisWeekNoAdmin</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.LEAD_SOURCE</columns>
        <columns>Lead_Source_Subtype__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>notEqual</operation>
            <value>dbamp,asudrupl,sfadmin</value>
        </filters>
        <label>Created This Week No Admin</label>
        <sharedTo>
            <group>QA_Testing_Group</group>
            <role>UTO_University_Technology_Office</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CreatedThisWeekaDBAmp</fullName>
        <columns>CAP__c</columns>
        <columns>CAP_Possible__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.LEAD_SOURCE</columns>
        <columns>Lead_Source_Subtype__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>dbamp</value>
        </filters>
        <label>Created This Week DBAmp</label>
        <sharedTo>
            <group>QA_Testing_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>External_Mastered_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.External_Mastered</value>
        </filters>
        <label>External Mastered Contacts</label>
        <sharedTo>
            <group>Corporate_Relations</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Student_Profile_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Student_Profile__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Student Profile Contacts</label>
        <sharedTo>
            <group>UTO_Administration</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>External_Mastered</fullName>
        <active>true</active>
        <description>Contact record that is updated from an external source; the system of record is an external database.</description>
        <label>External Mastered</label>
    </recordTypes>
    <recordTypes>
        <fullName>SF_Mastered</fullName>
        <active>true</active>
        <description>Contact record that exists only in Salesforce and is not updated from an external source</description>
        <label>SF Mastered</label>
        
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Contact_Data_Entry_Minimum_Requirements</fullName>
        <active>true</active>
        <description>Check to see that the minimum requirements are entered when creating a Contact record. A user must fill out these required fields in order to save the Contact: First Name, Last Name, and Email or Phone.</description>
        <errorConditionFormula>/* Requires First and Last Name, as well as Phone or Email to be populated */

AND( ISNew(), $Setup.Validation_Rule_Exception__c.Run_Validation_Rule__c,
OR( 
ISBLANK ( FirstName ), 
ISBLANK ( LastName ), 
AND( 
ISBLANK ( Email ), 
ISBLANK ( Phone ), 
ISBLANK ( HomePhone ), 
ISBLANK ( MobilePhone ), 
ISBLANK ( OtherPhone ) 
) 
) 
)</errorConditionFormula>
        <errorMessage>You must fill out these required fields in order to save the Contact: First Name, Last Name, and either Phone or Email.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Minimum_Length</fullName>
        <active>true</active>
        <description>Minimum Length for the field</description>
        <errorConditionFormula>Self_Service_PIN__c  &lt; 100000 
&amp;&amp; NOT(ISNULL(Self_Service_PIN__c))</errorConditionFormula>
        <errorDisplayField>Self_Service_PIN__c</errorDisplayField>
        <errorMessage>The field needs to be at least 6 digits long</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMS_Phone_Contains_Only_Numbers</fullName>
        <active>false</active>
        <description>Checking to see that the SMS Phone field has only numbers in the field</description>
        <errorConditionFormula>NOT(
OR(
ISBLANK(SMS_Phone__c),
REGEX( SMS_Phone__c,"^[0-9]{10}$"),
REGEX( SMS_Phone__c,"^[0-9]{15}$")
)
)</errorConditionFormula>
        <errorDisplayField>SMS_Phone__c</errorDisplayField>
        <errorMessage>SMS Phone must only contain 10 or 15 numbers. Please check the length and remove any symbols () + - / or letters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>silverpop__Disable_Changing_Enable_Sync</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISCHANGED(silverpop__Sync_to_Silverpop_Chk__c ), silverpop__Sync_to_Silverpop_Chk__c=false)</errorConditionFormula>
        <errorMessage>Sync to Silverpop selection cannot be changed. Once the box is checked, it cannot be unchecked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>silverpop__Disable_Changing_To_None</fullName>
        <active>false</active>
        <description>Sync to Silverpop selection cannot be changed. Once set to "Yes, Always Sync" or "No, Don't Sync" it cannot be changed back to "-None-.”</description>
        <errorConditionFormula>AND( ISCHANGED(silverpop__Sync_to_Silverpop__c ) &amp;&amp; ISPICKVAL( PRIORVALUE(silverpop__Sync_to_Silverpop__c ) , "No, Don't Sync") ,ISPICKVAL( silverpop__Sync_to_Silverpop__c  , ""))</errorConditionFormula>
        <errorMessage>Sync to Silverpop selection cannot be changed. Once set to "Yes, Always Sync" or "No, Don't Sync" it cannot be changed back to "-None-.”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>silverpop__Prevent_Change_From_Engage</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
PRIORVALUE( silverpop__Sync_to_Silverpop_Chk__c) = false , 
ISCHANGED( silverpop__CRMI_Modified_Date__c ))</errorConditionFormula>
        <errorDisplayField>silverpop__CRMI_Modified_Date__c</errorDisplayField>
        <errorMessage>Engage contact could not sync to Salesforce because the matching lead or contact in Salesforce has been set to not sync. You will need to change the "Sync to Silverpop" setting for the lead or contact in Salesforce.</errorMessage>
    </validationRules>
</CustomObject>