force-app/main/default/objects/Contact/fields/Average_MyASU_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Average_MyASU_Cohort__c</fullName>
    <businessOwnerGroup>Data_Owner_Campus_Community</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[ODS] asu_student_records.dwre_asu_stdnt_retention.avg_myasu_cohort</description>
    <label>Average MyASU Cohort</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>