force-app/main/default/objects/Contact/fields/Contact_URL_for_SMS_Inbox__c.field-meta.xml
<CustomField>
    <fullName>Contact_URL_for_SMS_Inbox__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <description>Link to the Contact on detail page</description>
    <formula>HYPERLINK("/lightning/r/Contact/"+ Id  +"/view","Link to Contact","_self")</formula>
    <inlineHelpText>Link to the Contact on detail page</inlineHelpText>
    <label>Contact URL for SMS Inbox</label>
    <type>Text</type>
</CustomField>