force-app/main/default/objects/Contact/fields/Current_Age_Calc__c.field-meta.xml
<CustomField>
    <fullName>Current_Age_Calc__c</fullName>
    <businessOwnerGroup>Data_Owner_Registrar</businessOwnerGroup>
    <complianceGroup>PII</complianceGroup>
    <description>Displays the users current age in years based on a calculation of their Birth Date</description>
    <formula>IF( NOT( ISBLANK( Birthdate )) &amp;&amp; NOT( Deceased__c ) ,
IF( DATE( 2000 , MONTH( Birthdate ) , DAY( Birthdate ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
YEAR (Today()) - YEAR ( Birthdate ),
YEAR (Today()) - YEAR ( Birthdate ) -1 ),
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the users current age in years based on a calculation of their Birth Date</inlineHelpText>
    <label>Current Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>