force-app/main/default/objects/Contact/fields/EdPlus_Coach_Canvas_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>EdPlus_Coach_Canvas_Dashboard__c</fullName>
    <businessOwnerGroup>Data_Owner_Ed_Plus</businessOwnerGroup>
    <description>Links to this online student's Canvas course information.
EdPlus is the owner of this data.
Data will not be returned if the contact is a non ASU Online contact.</description>
    <formula>HYPERLINK("https://bi.arizona.edu/#/site/ASU/views/SuccessCoachDashboard/CourseSummary?iframeSizedToWindow=true&amp;:embed=y&amp;:showAppBanner=false&amp;:display_count=no&amp;:showVizHome=no&amp;:origin=viz_share_link&amp;Student%20and%20Emplid="&amp;FirstName+ " " +LastName+ " (" +EMPLID__c+ ")", "Course Summary", "_blank")&amp; " | "
&amp;HYPERLINK("https://bi.arizona.edu/#/site/ASU/views/SuccessCoachDashboard/GradeSummary?iframeSizedToWindow=true&amp;:embed=y&amp;:showAppBanner=false&amp;:display_count=no&amp;:showVizHome=no&amp;:origin=viz_share_link&amp;Student%20and%20Emplid="&amp;FirstName+ " " +LastName+ " (" +EMPLID__c+ ")", "Grade Summary", "_blank")&amp; " | "
&amp;HYPERLINK("https://bi.arizona.edu/#/site/ASU/views/SuccessCoachDashboard/StudentFilter?iframeSizedToWindow=true&amp;:embed=y&amp;:showAppBanner=false&amp;:display_count=no&amp;:showVizHome=no&amp;:origin=viz_share_link&amp;Student%20and%20Emplid="&amp;FirstName+ " " +LastName+ " (" +EMPLID__c+ ")", "Student Filter", "_blank")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Links to this online student's Canvas course information.
Data will not be returned if the contact is a non ASU Online contact.</inlineHelpText>
    <label>EdPlus Coach Canvas Dashboard</label>
    <type>Text</type>
</CustomField>