force-app/main/default/objects/Contact/fields/EdPlus_Student_Reported_Timezone__c.field-meta.xml
<CustomField>
    <fullName>EdPlus_Student_Reported_Timezone__c</fullName>
    <businessOwnerGroup>Data_Owner_Ed_Plus</businessOwnerGroup>
    <description>[Ed Plus Success Coach / Success Portal Management (Ed Plus)] - Populated to denote for the contact's time zone. Will be used to display on the Success Coach Portal.</description>
    <inlineHelpText>[Ed Plus Success Coach / Success Portal Management (Ed Plus)] - Populated to denote for the contact's time zone. Will be used to display on the Success Coach Portal.</inlineHelpText>
    <label>EdPlus Student Reported Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alaska (AK)</fullName>
            </value>
            <value>
                <fullName>Arizona (AZ)</fullName>
            </value>
            <value>
                <fullName>Central (CST)</fullName>
            </value>
            <value>
                <fullName>Eastern (EST)</fullName>
            </value>
            <value>
                <fullName>Hawaii-Hilo (HI)</fullName>
            </value>
            <value>
                <fullName>International (INT)</fullName>
            </value>
            <value>
                <fullName>Mountain (MST)</fullName>
            </value>
            <value>
                <fullName>Pacific (PST)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>