force-app/main/default/objects/Contact/fields/Employment_Campus__c.field-meta.xml
<CustomField>
    <fullName>Employment_Campus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[Peoplesoft HR] - Employment campus / In Work.com this maps to Primary Location.</description>
    <inlineHelpText>[Peoplesoft HR] - Employment campus / In Work.com this maps to Primary Location.</inlineHelpText>
    <label>Employment Campus</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>