force-app/main/default/objects/Contact/fields/Employment_Department__c.field-meta.xml
<CustomField>
    <fullName>Employment_Department__c</fullName>
    <description>[Peoplesoft HR] - Primary job department name</description>
    <inlineHelpText>[Peoplesoft HR] - Primary job department name</inlineHelpText>
    <label>Employment Department</label>
    <length>100</length>
    <type>Text</type>
</CustomField>