force-app/main/default/objects/Contact/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <description>[Peoplesoft HR] - Primary job employment type</description>
    <inlineHelpText>[Peoplesoft HR] - Primary job employment type</inlineHelpText>
    <label>Employment Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>