force-app/main/default/objects/Contact/fields/Enrolled_Hold_Count__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Hold_Count__c</fullName>
    <businessOwnerGroup>Data_Owner_Registrar</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(Peoplesoft) Count of service indicators on PS_SRVC_IND_DATA with a PS_SERVICE_IMPACT.SERVICE_IMPACT LIKE '%ENR' 
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Enrolled Hold Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>