force-app/main/default/objects/Contact/fields/Enrolled_Next_Term__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Next_Term__c</fullName>
    <businessOwnerGroup>Data_Owner_Registrar</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <defaultValue>true</defaultValue>
    <description>If false, this student is not enrolled for next term based on the current term and Student Profile page shows "N". If true, this student is enrolled for the next term based on the current term and Student Profile page shows "--". This field is used on the Student Profile on the Undergraduate Indicators tab.</description>
    <label>Enrolled Next Term</label>
    <type>Checkbox</type>
</CustomField>