force-app/main/default/objects/Contact/fields/Financial_Aid_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Financial_Aid_Indicator__c</fullName>
    <businessOwnerGroup>Data_Owner_FA_Scholarship_Services</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(Peoplesoft) Complex SQL to arrive at FA Indicator.  Check with Ross Glass for questions.
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Financial Aid Indicator</label>
    <length>200</length>
    <type>Text</type>
</CustomField>