force-app/main/default/objects/Contact/fields/Financial_Hold__c.field-meta.xml
<CustomField>
    <fullName>Financial_Hold__c</fullName>
    <businessOwnerGroup>Data_Owner_FA_Scholarship_Services</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>(Peoplesoft) Complex SQL from PeopleSoft to arrive at Financial Hold.  Review logic with Ross Glass Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Financial Hold</label>
    <type>Checkbox</type>
</CustomField>