force-app/main/default/objects/Contact/fields/Grad_Student_LOA__c.field-meta.xml
<CustomField>
    <fullName>Grad_Student_LOA__c</fullName>
    <businessOwnerGroup>Data_Owner_AA_Academic_Advising</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>(Peoplesoft) Graduate Student Leave of Absence from PS table PS_ASU_AA_PETN_CHG Electronic petition associated with the iPOS 
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Grad Student LOA</label>
    <type>Checkbox</type>
</CustomField>