force-app/main/default/objects/Contact/fields/Last_Merge_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Merge_Date__c</fullName>
    <description>The most recent date and time this record was involved in a merge.</description>
    <inlineHelpText>Displays the date and time of the latest merge that affected this record.</inlineHelpText>
    <label>Last Merge Date</label>
    <type>Date</type>
</CustomField>