force-app/main/default/objects/Contact/fields/Merged_Contact__c.field-meta.xml
<CustomField>
    <fullName>Merged_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this record has been merged from another record.</description>
    <inlineHelpText>Checked if this record was created or updated as a result of a merge from another record.</inlineHelpText>
    <label>Merged Contact</label>
    <type>Checkbox</type>
</CustomField>