force-app/main/default/objects/Contact/fields/MyASU_Usage__c.field-meta.xml
<CustomField>
    <fullName>MyASU_Usage__c</fullName>
    <businessOwnerGroup>Data_Owner_Campus_Community</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[ODS] asu_student_records.dwre_asu_stdnt_retention.term_myasu_usage</description>
    <label>MyASU Usage</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>