force-app/main/default/objects/Contact/fields/Organization_Relations_Secondary_Email__c.field-meta.xml
<CustomField>
    <fullName>Organization_Relations_Secondary_Email__c</fullName>
    <businessOwnerGroup>Data_Owner_Org_Relations</businessOwnerGroup>
    <complianceGroup>Directory</complianceGroup>
    <description>Org Relations secondary email field.</description>
    <inlineHelpText>Org Relations secondary email field</inlineHelpText>
    <label>Organization Relations Secondary Email</label>
    <type>Email</type>
</CustomField>