force-app/main/default/objects/Contact/fields/Past_Due_Tip__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Tip__c</fullName>
    <businessOwnerGroup>Data_Owner_FA_Scholarship_Services</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(Peoplesoft) Sum PS_ITEM_DUE_SF2_VW.DUE_AMT meeting past due criteria.
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Past Due Tip</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>