force-app/main/default/objects/Contact/fields/Powerof1__c.field-meta.xml
<CustomField>
    <fullName>Powerof1__c</fullName>
    <description>Power of 1 formula field (EdPlus Use)</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>