force-app/main/default/objects/Contact/fields/Preferred_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_First_Name__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>Salesforce formula field for preferred name.</description>
    <formula>If(
(
(isBlank(FirstName)) &amp;&amp; (isBlank(PS_Preferred_First_Name__c))
),"",
If(
(isBlank(PS_Preferred_First_Name__c)),FirstName,PS_Preferred_First_Name__c
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Field - generates PS preferred name value if populated. If PS preferred name is blank, populate with First Name.</inlineHelpText>
    <label>Preferred First Name</label>
    <type>Text</type>
</CustomField>