force-app/main/default/objects/Contact/fields/Preferred_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Full_Name__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <description>If preferred name exists (Preferred First Name + Last Name), else (First Name + Last Name)</description>
    <formula>If(
(
(isBlank(FirstName)) &amp;&amp; (isBlank(PS_Preferred_First_Name__c))
),"",
If(
(isBlank(PS_Preferred_First_Name__c)),(FirstName &amp; " " &amp; LastName),(PS_Preferred_First_Name__c &amp; " " &amp; LastName)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Field - If preferred name exists (Preferred First Name + Last Name), else (First Name + Last Name)</inlineHelpText>
    <label>Preferred Full Name</label>
    <type>Text</type>
</CustomField>