force-app/main/default/objects/Contact/fields/Probation_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Probation_Indicator__c</fullName>
    <businessOwnerGroup>Data_Owner_Registrar</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>[Peoplesoft] - Checkbox which indicates, if selected, that a student has a probation flag.</description>
    <label>Probation Indicator</label>
    <type>Checkbox</type>
</CustomField>