force-app/main/default/objects/Contact/fields/PS_Preferred_First_Name__c.field-meta.xml
<CustomField>
    <fullName>PS_Preferred_First_Name__c</fullName>
    <businessOwnerGroup>Data_Owner_Campus_Community</businessOwnerGroup>
    <complianceGroup>Directory</complianceGroup>
    <description>Peoplesoft preferred name - source table PS_S_Names
[MDM] - Read/Write - Critical to MDM</description>
    <inlineHelpText>PeopleSoft 'Preferred Name' value</inlineHelpText>
    <label>PS Preferred First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>