force-app/main/default/objects/Contact/fields/Research_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Research_Assistant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(PeopleSoft) PS_JOBS.RESEARCH_ASSISTANT (based on job codes)</description>
    <label>Research Assistant</label>
    <type>Checkbox</type>
</CustomField>