force-app/main/default/objects/Contact/fields/SMS_Magic_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>SMS_Magic_Opt_In_Date__c</fullName>
    <description>Inactive field 06-03-22 This is populated when the SMS Magic permission to text is marked TRUE</description>
    <inlineHelpText>Date when the SMS Magic permission to text is marked TRUE</inlineHelpText>
    <label>SMS Magic Opt In Date</label>
    <type>DateTime</type>
</CustomField>