force-app/main/default/objects/Contact/fields/SMS_Magic_Opt_In_History__c.field-meta.xml
<CustomField>
    <fullName>SMS_Magic_Opt_In_History__c</fullName>
    <description>Inactive field - 06-03-22 -tracks history of changes on field SMS Permission To Text</description>
    <inlineHelpText>history of changes on field SMS Permission To Text</inlineHelpText>
    <label>SMS Magic Opt In History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>